force-app/main/default/objects/Journalizing_Schedule__c/Journalizing_Schedule__c.object-meta.xml
<CustomObject>
    <label>Journalizing Schedule</label>
    <nameField>
        <displayFormat>JS-{0000000000}</displayFormat>
        <label>Journalizing Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journalizing Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>