force-app/main/default/objects/Journalizing_Schedule__c/fields/FIN_Contract__c.field-meta.xml
<CustomField>
    <fullName>FIN_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Journalizing Schedules</relationshipLabel>
    <relationshipName>Journalizing_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>