force-app/main/default/objects/Journalizing_Schedule__c/fields/FIN_Explanation__c.field-meta.xml
<CustomField>
    <fullName>FIN_Explanation__c</fullName>
    <defaultValue>&apos;SF Sales&apos;</defaultValue>
    <label>Explanation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>