force-app/main/default/objects/Journalizing_Schedule__c/fields/FIN_GLDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_GLDate__c</fullName>
    <defaultValue>IF(
  MONTH(TODAY()) = 1,
  DATE(YEAR(TODAY()-1), 12, 31 ),
  DATE(YEAR(TODAY()), MONTH(TODAY()-1), 1 ) - 1 
)</defaultValue>
    <label>GL Date</label>
    <type>Date</type>
</CustomField>