force-app/main/default/objects/Journalizing_Schedule__c/fields/FIN_JDEdwardsBatchNumber__c.field-meta.xml
<CustomField>
    <fullName>FIN_JDEdwardsBatchNumber__c</fullName>
    <label>JD Edwards Batch Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>