force-app/main/default/objects/Journalizing_Schedule__c/fields/FIN_Journal_Report_Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>FIN_Journal_Report_Generation_Date__c</fullName>
    <label>Journal Report Generation Date</label>
    <type>Date</type>
</CustomField>