force-app/main/default/objects/Journalizing_Schedule__c/fields/FIN_Publishing_Date__c.field-meta.xml
<CustomField>
    <fullName>FIN_Publishing_Date__c</fullName>
    <label>Publishing Date</label>
    <type>Date</type>
</CustomField>