force-app/main/default/objects/Journalizing_Schedule__c/fields/FIN_Remittance_Date__c.field-meta.xml
<CustomField>
    <fullName>FIN_Remittance_Date__c</fullName>
    <label>Remittance Date</label>
    <type>Date</type>
</CustomField>