force-app/main/default/objects/Journalizing_Schedule__c/fields/FIN_Status__c.field-meta.xml
<CustomField>
    <fullName>FIN_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FIN_Journalizing_Status</valueSetName>
    </valueSet>
</CustomField>