force-app/main/default/objects/Journalizing_Schedule__c/fields/FIN_Type__c.field-meta.xml
<CustomField>
    <fullName>FIN_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDs</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>