force-app/main/default/objects/Journalizing_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIN_Contract__c</columns>
    <columns>FIN_GLDate__c</columns>
    <columns>FIN_StartDate__c</columns>
    <columns>FIN_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>